--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,10 @@ Maintainer: Nele Schuwirth <nele.schuwirth@eawag.ch>
 Description: Numerically solve and plot solutions of a parametric ODE model of
         growth, death, and respiration of different taxa dependent on
         pre-defined environmental factors (Schuwirth, N. and Reichert, P., 2013,
-        Ecology, 94(2)).
+        Ecology, 94(2), DOI: 10.1890/12-0591.1).
 URL: http://www.eawag.ch/en/department/siam/projects/streambugs/
-License: GPL (>= 2)
+BugReports: https://github.com/trybik/streambugs/issues
+License: file LICENSE
 Depends: R (>= 3.0.2)
 Imports: deSolve (>= 1.20)
 Suggests: testthat
