--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,20 @@
 Package: streambugs
 Type: Package
-Title: Parametric ODE Model of Growth, Death, and Respiration of Different Taxa
+Title: Parametric Ordinary Differential Equations Model of Growth, Death, and
+        Respiration of Taxa
 Version: 1.0
 Date: 2017-11-01
 Author: Peter Reichert, Mikolaj Rybinski, Nele Schuwirth
 Maintainer: Nele Schuwirth <nele.schuwirth@eawag.ch>
-Description: Numerically solve and plot solutions of a parametric ODE model of
-        growth, death, and respiration of different taxa dependent on
-        pre-defined environmental factors (Schuwirth, N. and Reichert, P., 2013,
-        Ecology, 94(2), DOI: 10.1890/12-0591.1).
+Description: Numerically solve and plot solutions of a parametric ordinary
+        differential equations model of growth, death, and respiration of
+        different taxa dependent on pre-defined environmental factors. The model
+        (version 1.0) is introduced in Schuwirth, N. and Reichert, P., (2013)
+        <DOI: 10.1890/12-0591.1>. This package includes model extensions and the
+        core functions introduced and used in Kattwinkel, M. et al. (2016)
+        <DOI: 10.1021/acs.est.5b04068>, Mondy, C. P., and Schuwirth, N. (2017)
+        <DOI: 10.1002/eap.1530>, and Paillex, A. et al. (2017)
+        <DOI: 10.1111/fwb.12927>.
 URL: http://www.eawag.ch/en/department/siam/projects/streambugs/
 BugReports: https://github.com/trybik/streambugs/issues
 License: GPL-3 + file LICENSE
