re-factoried tests example as API fun `streambugs.example.model.toy` + file headers and DESCRIPTION date update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,streambugs)
 export(construct.statevariables)
 export(decode.statevarnames)
 export(run.streambugs)
+export(streambugs.example.model.toy)
 export(streambugs.get.sys.def)
 export(streambugs.write.sys.def)
 importFrom(deSolve,ode)
